# junit2md

./: .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md
spec/: strict-non-applicable.xsd
src/: main.rs
src/lang_specific/: mod.rs
src/md/: mod.rs
src/model/: mod.rs
